    
- ext
  - the compiler extension now allows @compiles decorators
    on base classes that extend to child classes, @compiles
    decorators on child classes that aren't broken by a 
    @compiles decorator on the base class.
   
  - Declarative will raise an informative error message
    if a non-mapped class attribute is referenced in the
    string-based relationship() arguments.

- oracle
  - Now using cx_oracle output converters so that the
    DBAPI returns natively the kinds of values we prefer:
    - NUMBER values with positive precision + scale convert
      to cx_oracle.STRING and then to Decimal.   This 
      allows perfect precision for the Numeric type when
      using cx_oracle.  [ticket:1759]
    - STRING/FIXED_CHAR now convert to unicode natively.
      SQLAlchemy's String types then don't need to 
      apply any kind of conversions.
    
- examples
  - Updated attribute_shard.py example to use a more robust
    method of searching a Query for binary expressions which
    compare columns against literal values.
    
0.6beta3
========

- orm
  - Major feature: Added new "subquery" loading capability to 
    relationship().   This is an eager loading option which
    generates a second SELECT for each collection represented
    in a query, across all parents at once.  The query 
    re-issues the original end-user query wrapped in a subquery,
    applies joins out to the target collection, and loads 
    all those collections fully in one result, similar to 
    "joined" eager loading but using all inner joins and not 
    re-fetching full parent rows repeatedly (as most DBAPIs seem 
    to do, even if columns are skipped).   Subquery loading is 
    available at mapper config level using "lazy='subquery'" and 
    at the query options level using "subqueryload(props..)", 
    "subqueryload_all(props...)".  [ticket:1675]

  - To accomodate the fact that there are now two kinds of eager 
    loading available, the new names for eagerload() and 